Modernize use of deprecated methods to new ways
- new Integer/Long/Float/Boolean(String)

Deprecated and marked for removal.
Use parseInt/Long/Float/Boolean(String) to convert to primitives, or
valueOf(String) to create objects.

- new Long/Integer/Float(long/int/float)

Deprecated and marked for removal.
Use Long.valueOf(long/int/float). Auto-boxing usually compiles into this.
(see https://stackoverflow.com/questions/31445024/does-autoboxing-call-valueof )

- Class.newInstance()

Deprecated,
can be replaced by clazz.getDeclaredConstructor().newInstance().